--- a/practice1.html
+++ b/practice1.html
@@ -39,6 +39,7 @@
 
  <h2>Links</h2>
  <p>Check out my <a href="https://github.com/sawan201" onclick="displayMessage()">GitHub repository</a>!</p>
+ <p>My EECS Peoples<a href ="https://people.eecs.ku.edu/~s706a507/" onclick="displayMessage()"> Link:</a></p>
  <script>
    function displayMessage() {
      alert('Thank you for visiting!');
